--- a/main/package.json
+++ b/main/package.json
@@ -24,7 +24,6 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "mongoose": "^8.8.0",
-    "nodemailer": "^6.9.16",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer": "^6.9.16"
   }
 }
