modified mailer bot

--- a/main/.env
+++ b/main/.env
@@ -1,2 +1,4 @@
 CODESPACE_URL=https://special-enigma-jjrxppqwg7p7hqgjj-3000.app.github.dev/
 MONGODB_URI=mongodb+srv://eo-renki:18634022@cluster0.knfm8.mongodb.net/market-project?retryWrites=false&w=majority&appName=Cluster0
+MAILER_MAIL='noreply.mailler.bot@gmail.com'
+MAILER_PASS='mahw rzed xuxl lmym'
