--- a/main/.env.example
+++ b/main/.env.example
@@ -1,4 +1,11 @@
+# Se você está no VS Code, coloque: http://localhost:3000/
 CODESPACE_URL=
+
+# Seu Cluster do MongoDB (não esqueça de colocar a database e retryWrites como false)
 MONGODB_URI=
+
+# G-Mail do bot usado pra ferramenta 'Esqueceu a senha?' (Você precisa de uma 'senha de app do Google')
 MAILER_MAIL=
+
+# A 'senha de app' do Google
 MAILER_PASS=
